added version as parameter

--- a/src/site/markdown/update-manual.md.vm
+++ b/src/site/markdown/update-manual.md.vm
@@ -1,4 +1,4 @@
-Manualles Update auf DWH-J2EE-0.7 für Debian, CentOS
+Manualles Update auf DWH-J2EE-${dwhImportVersion} für Debian, CentOS
 ====================================================
 
 Anmelden als ROOT
