--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -9,7 +9,7 @@ Neuinstallation
 ---------------
 Wenn Sie noch keine Installation haben, oder den Server komplett neu aufsetzen wollen, dann folgen Sie bitte der Anleitung unter dem Punkt AKTIN (NEU-)INSTALLATION. Bitte beachten Sie die [Voraussetzungen](install-requirements.html), dort werden die verschiedenen Varianten der Neu-Installation beschrieben.
 
-Sie erhalten mit einer Neuinstallation automatisch den neuesten den Release-Stand 0.7, d.h. anschließend ist kein Update/Patch mehr notwendig.
+Sie erhalten mit einer Neuinstallation automatisch den neuesten Release-Stand (0.7), d. h. anschließend ist kein Update/Patch mehr notwendig.
 
 
 Skriptbasiertes Update für Debian (und CentOS)
