--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -36,17 +36,11 @@ Software-Pakete
 
 _Installationspaket mit DWH-J2EE-${dwhJ2EEVersion}_
 
-```
-${releaseRepoUrl}/org/aktin/dwh-install/${dwhServerVersion}/dwh-install-${dwhServerVersion}.tar.gz
-```
-
+[${releaseRepoUrl}/org/aktin/dwh-install/${dwhServerVersion}/dwh-install-${dwhServerVersion}.tar.gz](${releaseRepoUrl}/org/aktin/dwh-install/${dwhServerVersion}/dwh-install-${dwhServerVersion}.tar.gz)
 
 _Softwareupdate-Paket auf DWH-J2EE-${dwhJ2EEVersion}_
 
-```
-${releaseRepoUrl}/org/aktin/dwh-update/${dwhServerVersion}/dwh-update-${dwhServerVersion}.tar.gz
-```
-
+[${releaseRepoUrl}/org/aktin/dwh-update/${dwhServerVersion}/dwh-update-${dwhServerVersion}.tar.gz](${releaseRepoUrl}/org/aktin/dwh-update/${dwhServerVersion}/dwh-update-${dwhServerVersion}.tar.gz)
 Beschreibungen und Hinweise
 ---------------------------
 
