--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -9,23 +9,23 @@ Neuinstallation
 ---------------
 Wenn Sie noch keine Installation haben, oder den Server komplett neu aufsetzen wollen, dann folgen Sie bitte der Anleitung unter dem Punkt AKTIN (NEU-)INSTALLATION. Bitte beachten Sie die [Voraussetzungen](install-requirements.html), dort werden die verschiedenen Varianten der Neu-Installation beschrieben.
 
-Sie erhalten mit einer Neuinstallation automatisch den neuesten Release-Stand (${dwhServerVersion}), d. h. anschließend ist kein Update/Patch mehr notwendig.
+Sie erhalten mit einer Neuinstallation automatisch den neuesten Release-Stand (${project.version}), d. h. anschließend ist kein Update/Patch mehr notwendig.
 
 
-Skriptbasiertes Update für Debian (und CentOS)
----------------------------------
+Automatisches Update für Debian (und CentOS)
+--------------------------------------------
 Falls Sie einen Debian-Server nutzen, der anhand der Anleitung eingerichtet wurde, sollten die Update-Scripte bei Ihnen funktionieren.
 
-__Update auf ${dwhServerVersion}__
+__Update auf ${project.version}__
 
-Für einen Update auf ${dwhServerVersion} folgen Sie der Anleitung zum [skriptbasierten Update](update-auto.html)
+Für einen Update auf ${project.version} folgen Sie der Anleitung zum [skriptbasierten Update](update-auto.html)
 
 
 Manuelles Update für Debian, CentOS oder andere Betriebssysteme
 ----------------------------------------------------------------
 Bei individuell konfigurierten Servern oder anderen Linux-Distributionen führen Sie die einzelnen Schritte des Scripts bitte manuell durch und passen Sie ggf. die Pfade oder andere Besonderheiten entsprechend an.
 
-__Update auf ${dwhServerVersion}__
+__Update auf ${project.version}__
 
 Bitte folgen Sie der Anleitung zum [manuellen Update](update-manual.html)
 
@@ -36,11 +36,11 @@ Software-Pakete
 
 _Installationspaket mit DWH-J2EE-${dwhJ2EEVersion}_
 
-[${releaseRepoUrl}/org/aktin/dwh-install/${dwhServerVersion}/dwh-install-${dwhServerVersion}.tar.gz](${releaseRepoUrl}/org/aktin/dwh-install/${dwhServerVersion}/dwh-install-${dwhServerVersion}.tar.gz)
+[${releaseRepoUrl}/org/aktin/dwh-install/${project.version}/dwh-install-${project.version}.tar.gz](${releaseRepoUrl}/org/aktin/dwh-install/${project.version}/dwh-install-${project.version}.tar.gz)
 
 _Softwareupdate-Paket auf DWH-J2EE-${dwhJ2EEVersion}_
 
-[${releaseRepoUrl}/org/aktin/dwh-update/${dwhServerVersion}/dwh-update-${dwhServerVersion}.tar.gz](${releaseRepoUrl}/org/aktin/dwh-update/${dwhServerVersion}/dwh-update-${dwhServerVersion}.tar.gz)
+[${releaseRepoUrl}/org/aktin/dwh-update/${project.version}/dwh-update-${project.version}.tar.gz](${releaseRepoUrl}/org/aktin/dwh-update/${project.version}/dwh-update-${project.version}.tar.gz)
 Beschreibungen und Hinweise
 ---------------------------
 
