--- a/src/site/markdown/install-script.md.vm
+++ b/src/site/markdown/install-script.md.vm
@@ -19,17 +19,17 @@ Um das Skript zu starten, brauchen Sie einen Konsolenzugang zum Server.
 Wechseln Sie zunächst zum Benutzer `root` (z.B. via `su -`). Anschließend
 können Sie unser Paket unter folgendem Link herunterladen:
 
-${releaseRepoUrl}/org/aktin/dwh-install/${dwhServerVersion}/dwh-install-${dwhServerVersion}.tar.gz
+${releaseRepoUrl}/org/aktin/dwh-install/${project.version}/dwh-install-${project.version}.tar.gz
 
 z.B. mit 
 
 ```
-# wget ${releaseRepoUrl}/org/aktin/dwh-install/${dwhServerVersion}/dwh-install-${dwhServerVersion}.tar.gz
+# wget ${releaseRepoUrl}/org/aktin/dwh-install/${project.version}/dwh-install-${project.version}.tar.gz
 ```
 (evtl. mit Option `--no-check-certificate` bei Zertifikatfehlern).
 
 Wenn das Paket heruntergeladen ist, kann es entpackt werden mit 
-`tar xvzf dwh-install-${dwhServerVersion}.tar.gz`. Die Dateien werden dann automatisch in 
+`tar xvzf dwh-install-${project.version}.tar.gz`. Die Dateien werden dann automatisch in 
 den Ordner `akin-dwh-install` entpackt.
 
 Die Installation benötigt Zugriff auf das Internet - speziell die jeweiligen 
@@ -62,7 +62,7 @@ entsprechende IP-Adresse / Servername angepasst werden:
 Test der Importschnittstelle
 ----------------------------
 Die Importschnittstelle des Servers kann mit den Client-Programmen
-aus dem Software-Paket (ZIP) des [Demo-Server](demo-server.html)
+aus dem Software-Paket (ZIP) des [Demo-Server](../0.7/dwh-import/demo-server.html)
 getestet werden:
 
 ```
